--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.3.2",
     "antd": "^3.23.6",
     "firebase": "^7.2.0",
     "react": "^16.10.2",
